[package]
name = "turbo_web_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-multipart = "0.6"
actix-files = "0.6"
actix-cors = "0.6"
futures-util = "0.3"
tokio = { version = "1", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bigdecimal = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1.0", features = ["numeric", "postgres", "chrono", "r2d2", "uuid"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
regex = "1"
jsonwebtoken = "9"
futures = "0.3.31"
